# gdextension-audio-effect

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: Findgodot-cpp.cmake  Findgodotcpp.cmake  Findjuce.cmake
demo/audio_plugin_host/: default_bus_layout.tres  juce_audio_plugin_host_control.gd  piano.gd  piano.tscn  project.godot
demo/audio_plugin_host/export/: MIDI Piano Demo.pck
demo/audio_plugin_host/piano_keys/: piano_key.gd  white_piano_key.tscn
demo/audio_plugin_host/plugin_host/: juce_audio_plugin_host_control.gd  juce_audio_plugin_host_control.gd.uid
demo/audio_plugin_host/spectrum/: show_spectrum_single.gd  show_spectrum_single.gd.uid
demo/midi_piano/: juce_instrument_control.gd  piano.gd  piano.tscn  project.godot
demo/midi_piano/piano_keys/: black_piano_key.tscn  piano_key.gd  piano_key_color.gd  white_piano_key.tscn
demo/spectrum/: default_bus_layout.tres  label_gain_value.gd  project.godot  reverb_ui.gd  reverb_ui.gd.uid  show_spectrum.gd.uid  show_spectrum.tscn  show_spectrum_stereo.gd  show_spectrum_stereo.gd.uid
demo/spectrum/scripts/: label_gain_value.gd  label_gain_value.gd.uid  reverb_control.gd  show_spectrum.gd  show_spectrum_single.gd  show_spectrum_single.gd.uid  slider_gain_control.gd  slider_gain_control.gd.uid
projects/: CMakeLists.txt
projects/JuceAudioPluginHost/: CMakeLists.txt
projects/JuceAudioPluginHost/gdextension_module_def/: JuceAudioPluginHost.gdextension
projects/JuceAudioPluginHost/source/: VST3PluginLoader.h  juce_audio_plugin_editor_window.cpp  juce_audio_plugin_editor_window.h  juce_audio_plugin_host.cpp  juce_audio_plugin_host.h  register_types.cpp  register_types.h
projects/JuceInstrument/: CMakeLists.txt
projects/JuceInstrument/gdextension_module_def/: JuceInstrument.gdextension
projects/JuceInstrument/source/: juce_instrument.cpp  juce_instrument.h  register_types.cpp  register_types.h
projects/JuceReverb/: CMakeLists.txt
projects/JuceReverb/gdextension_module_def/: JuceReverb.gdextension
projects/JuceReverb/source/: juce_reverb.cpp  juce_reverb.h  register_types.cpp  register_types.h
projects/JuceReverbWithUI/: CMakeLists.txt
projects/JuceReverbWithUI/gdextension_module_def/: JuceReverbWithUI.gdextension
projects/JuceReverbWithUI/source/: juce_reverb_with_ui.cpp  juce_reverb_with_ui.h  register_types.cpp  register_types.h
projects/StereoAmplify/: CMakeLists.txt
projects/StereoAmplify/gdextension_module_def/: StereoAmplify.gdextension
projects/StereoAmplify/source/: register_types.cpp  register_types.h  stereo_amplify.cpp  stereo_amplify.h
projects/helloworld/: CMakeLists.txt
projects/helloworld/gdextension_module_def/: helloworld.gdextension
projects/helloworld/source/: gdexample.cpp  gdexample.h  register_types.cpp
